--- a/public/html/index.html
+++ b/public/html/index.html
@@ -34,12 +34,39 @@
                     <div class="col layout">
                         <!-- All dashboard widgets -->
                         <div class="row">
-                            <div class="col">WALLET INFO</div>
-                            <div class="col">GRAPH</div>
+                            <div class="col-md-6 p-3">
+                                <div class="address-card">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <h4>XRP/EURO</h4>
+                                        </div>
+                                        <div class="col-sm-6 d-flex justify-content-end">
+                                            <button class="btn btn-primary">
+                                                <i class="bi bi-arrow-clockwise"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h4 class="display-4 text-center">589 XRP</h4>
+                                        </div>  
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <p class="text-muted">ripple.com</p>
+                                        </div>
+                                        
+                                        <div class="col-sm-6 text-end">
+                                            <p class="text-muted">ajubhu87bd7abd7b77vg</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">GRAPH</div>
                         </div>
                         <div class="row">
-                            <div class="col">TRANSACTION INFO</div>
-                            <div class="col">HiSTORY</div>
+                            <div class="col-md-6">TRANSACTION INFO</div>
+                            <div class="col-md-6">HiSTORY</div>
                         </div>
                     </div>
                 </div>
@@ -51,7 +78,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="../js/main.js"></script>
+    <script src="../js/main.js" type="module"></script>
 
     <!-- Javascript files -->
 </body>
