Added admin functions on admin dashboard

--- a/Rich-list node server/public/html/charts.html
+++ b/Rich-list node server/public/html/charts.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    
     <title>Charts</title>
 </head>
 <body>
@@ -19,7 +24,7 @@
             <!-- User info and navigation menu -->
             <div class="col-md-2">
                 <div class="row h-100 p-2">
-                    <div class="col layout user-margin d-flex flex-column" align="center">
+                    <div class="col menu-layout user-margin d-flex flex-column" align="center">
                         <img class="p-3 mx-auto" width="150px" src="static/images/Ripple_logo.png">
                         <img class="user-image p-2 mx-auto" src="static/images/testUser.jpg">
                         <h6 class="text-muted">Welcome back,</h6>
