Upgraded the home page :100:

--- a/Rich-list node server/public/html/admin-login.html
+++ b/Rich-list node server/public/html/admin-login.html
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         
         <title>Richlist - admin login</title>
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon1.png">
         
     </head>
     <body>
@@ -28,12 +28,12 @@
                         <div class="col-md p-4 credentials slide-in-top">
                             <div class="row">
                                 <div class="col-md p-4">
-                                    <h1 class="display-4 text-center p-4 font-weight-bolder">Admin</h1>
-                                    <!-- <img src="/static/images/Ripple_logo.png" class="logo-image"> -->
-                                    <p class="text-muted">Login into admin panel</p>
+                                    <!-- <h1 class="display-4 text-center p-4 font-weight-bolder">Admin</h1> -->
+                                    <img src="/static/images/richlist-logo-admin.png" class="logo-image">
+                                    <p class="text-muted  mb-1"><b>Welcome admin!</b></p>
                                     <input type="text" id="Email" class="form-control address mb-1" aria-describedby="wallet-help" placeholder="Email">
                                     <input type="password" id="Password" class="form-control address mb-2" aria-describedby="wallet-help" placeholder="Password">
-                                    <small id="wallet-help" class="form-text text-muted">See you on the other side ;)</small>
+                                    <small id="wallet-help" class="form-text text-muted">Forgot your password or email? <a  href="">Click here</a></small>
                                 </div>
                             </div>
                             <div class="alert alert-danger" role="alert">
@@ -41,7 +41,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md p-4">
-                                    <button id="login" class="btn w-100 btn-primary searchAddress">Login</button>
+                                    <button id="login" class="btn w-100 btn-primary-admin searchAddress">Login</button>
                                 </div>
                             </div>
                         </div>
