--- a/Rich-list node server/public/html/login.html
+++ b/Rich-list node server/public/html/login.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         
         <title>Richlist - Login</title>
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon1.png">
     </head>
     <body>
         <div class="container wrapper">
@@ -27,7 +27,7 @@
                             <div class="row">
                                 <div class="col-md p-4">
                                     <!-- <h1 class="display-4 text-center p-4 font-weight-bolder">Ripple</h1> -->
-                                    <img src="/static/images/Ripple_logo.png" class="logo-image">
+                                    <img src="/static/images/richlist-logoMiddel.png" class="logo-image">
                                     <p class="text-muted">Please fill in your XRP wallet address so we can search for your information on the ledger.</p>
                                     <input type="text" class="form-control address" id="exampleInputEmail1" aria-describedby="wallet-help" placeholder="Wallet address">
                                     <small id="wallet-help" class="form-text text-muted">Your wallet address will be used to search in the XRP ledger.</small>
