--- a/Rich-list node server/public/html/admin-dashboard.html
+++ b/Rich-list node server/public/html/admin-dashboard.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <title>Richlist - admin dashboard</title>
-        <link rel="icon" type="image/x-icon" href="/static/images/favicon.png">
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon1.png">
         
     </head>
     <body>
