addedtoast messages to admin panel

--- a/Rich-list node server/public/html/ledger.html
+++ b/Rich-list node server/public/html/ledger.html
@@ -21,9 +21,9 @@
                 <div class="row h-100 p-2">
                     <div class="col menu-layout user-margin d-flex flex-column" align="center">
                         <img class="p-3 mx-auto" width="150px" src="static/images/Ripple_logo.png">
-                        <img class="user-image p-2 mx-auto" src="static/images/testUser.jpg">
+                        <br>
                         <h6 class="text-muted">Welcome back,</h6>
-                        <h4>Bram Jansen</h4>
+                        <h4>XRP Holder</h4>
                         <div>
                             <ul class="p-0">
                                 <li>
