--- a/Rich-list node server/public/html/user-login.html
+++ b/Rich-list node server/public/html/user-login.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/css/credentials.css">
+        <link rel="stylesheet" href="/static/css/user-login.css">
+        <link rel="stylesheet" href="/static/css/animations.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,10 +32,10 @@
                                     <p class="text-muted">Please fill in your XRP wallet address so we can search for your information on the ledger.</p>
                                     <input type="text" class="form-control address" id="exampleInputEmail1" aria-describedby="wallet-help" placeholder="Wallet address">
                                     <small id="wallet-help" class="form-text text-muted">Your wallet address will be used to search in the XRP ledger.</small>
-                                </div>
-                            </div>
-                            <div class="alert alert-danger" role="alert">
+                                    <div class="alert alert-danger mt-3" role="alert">
                                 
+                                    </div>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-md p-4">
@@ -54,6 +55,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
         <!-- Javascript files -->
-        <script src="static/js/credentials.js" type="module"></script>
+        <script src="static/js/user-login.js" type="module"></script>
     </body>
 </html>
