--- a/Rich-list node server/public/html/index.html
+++ b/Rich-list node server/public/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/index.css">
     <link rel="stylesheet" href="/static/css/dashboard.css">
+    <link rel="stylesheet" href="/static/css/animations.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,9 +29,9 @@
                 <div class="row h-100 p-2">
                     <div class="col menu-layout user-margin d-flex flex-column" align="center">
                         <img class="p-3 mx-auto" width="150px" src="static/images/richlist-logoMiddel.png">
-                        <img class="user-image p-2 mx-auto" src="static/images/testUser.jpg">
+                        <br>
                         <h6 class="text-muted">Welcome back,</h6>
-                        <h4>Bram Jansen</h4>
+                        <h4>XRP holder</h4>
                         <div>
                             <ul class="p-0">
                                 <li class="active-menu">
@@ -64,9 +65,9 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="row">
+                                    <div  class="row">
                                         <div class="col">
-                                            Contact
+                                            <a href="/contact">Contact</a>
                                        </div>
                                         <div class="col text-end">
                                             <i class="bi bi-arrow-right-short"></i>
@@ -97,7 +98,7 @@
                         <!-- All dashboard widgets -->
                         <div class="row">
                             <div class="col-md-6 p-3">
-                                <div class="address-card">
+                                <div class="address-card ">
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <h4>Rank</h4>
@@ -110,7 +111,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="col-sm-12">
-                                            <h4 id="walletAmount" style="font-weight: 600;" class="display-4 text-center">-</h4>
+                                            <h4 id="rank" style="font-weight: 600;" class="display-4 text-center">-</h4>
                                         </div>  
                                     </div>
                                     <div class="row">
@@ -123,7 +124,7 @@
                                             <p class="card-items">Icon</p>
                                             <p class="text-muted rankEmblem">223</p>
                                         </div>
-                                        <div class="col text-center">
+                                        <div class="col text-center text-break">
                                             <p class="card-items">Address</p>
                                             <p id="address" class="text-muted">34</p>
                                         </div>
@@ -138,8 +139,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 p-3">
-                                <div class="row">
+                            <div class="col-md-6 p-3 holdings-col">
+                                <div class="row m-0 w-100">
                                     <div class="col">
                                         <h4 class="">Currency</h4>
                                         <p class="text-muted">Recieved currencies. Excluding <b>XRP</b></p>
@@ -148,23 +149,17 @@
                                 <div class="row currency-list">
                                     <div class="col p-1 accent-currency-card">
                                         <div class="p-2 h-100 currency-card tx-loader-item">
-                                            <p class="display-4 ">BTC</p>
-                                            <p class="text-muted ">Amount</p>
-                                            <p class="lead ">0.230</p>
+                                            <h4 class="">BTC</h4>
                                         </div>
                                     </div>
                                     <div class="col p-1 accent-currency-card">
                                         <div class="p-2 h-100 currency-card tx-loader-item">
-                                            <p class="display-4 ">SOL</p>
-                                            <p class="text-muted ">Amount</p>
-                                            <p class="lead ">0.230</p>
+                                            <h4 class="">SOL</h4>
                                         </div>
                                     </div>
                                     <div class="col p-1 accent-currency-card">
                                         <div class="p-2 h-100 currency-card tx-loader-item">
-                                            <p class="display-4 ">USD</p>
-                                            <p class="text-muted ">Amount</p>
-                                            <p class="lead ">0.230</p>
+                                            <h4 class=" ">USD</h4>
                                         </div>
                                     </div>
                                     
@@ -177,26 +172,6 @@
                                 <p  class="text-muted">
                                     All recent transaction from this account. <i class="bi bi-arrow-down-circle-fill income"></i></i> Incoming <i class="bi bi-arrow-up-circle-fill expenses"></i> Outgoing
                                 </p>
-                                <!-- <div class="row text-center tx-indicator-spacing">
-                                    <div class="col-md-1">
-                                        <p class="tx-indicator-item"><i class="bi bi-arrow-down-up"></i></p>
-                                    </div>
-                                    <div class="col-md-1">
-                                        <p class="tx-indicator-item"><i class="bi bi-capslock-fill"></i></p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <p class="tx-indicator-item"><i class="bi bi-bezier2"></i></p>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p class="tx-indicator-item"><i class="bi bi-calendar-week"></i></p>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <p class="tx-indicator-item"><i class="bi bi-arrow-left-right"></i></p>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <p class="tx-indicator-item">Amount</p>
-                                    </div>
-                                </div> -->
                                 <div class="tx-container">
                                 </div>
                             </div>
@@ -209,13 +184,24 @@
                                         <span aria-hidden="true">&times;</span>
                                       </button>
                                     </div>
-                                    <div class="modal-body">
+                                    <div class="modal-body text-break">
                                         <div class="row m-1 tx-modal-item">
                                             <div class="col">
                                                 <h4 class="m-info">
-                                                    Info 
+                                                    Transaction information
                                                     <i class=""></i>
                                                 </h4>
+                                                <p class="text-muted  text-break">
+                                                    All transaction details recieved directly from the XRP ledger.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="row m-1 tx-modal-item">
+                                            <div class="col">
+                                                <h5 class="badge badge-primary m-0">Currency</h5>
+                                            </div>
+                                            <div class="col">
+                                                <p class="m-0"><small class=""><b class="m-currency">dasdasdas</b></small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -223,7 +209,7 @@
                                                 <h5 class="badge badge-primary m-0">From</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-from text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-from ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -231,7 +217,7 @@
                                                 <h5 class="badge badge-primary m-0">To</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-to text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-to">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -239,7 +225,7 @@
                                                 <h5 class="badge badge-primary m-0">Fee</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-fee text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-fee ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -247,7 +233,7 @@
                                                 <h5 class="badge badge-primary">Type</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-type text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-type ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -255,7 +241,7 @@
                                                 <h5 class="badge badge-primary m-0">Sign key</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-sign-key text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-sign-key ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -263,7 +249,7 @@
                                                 <h5 class="badge badge-primary m-0">Hash</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-hash text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-hash ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -271,7 +257,7 @@
                                                 <h5 class="badge badge-primary m-0">Ledger index</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-ledger-index text-break">dasdasdas</small></p>
+                                                <p class="m-0"><small class="m-ledger-index ">dasdasdas</small></p>
                                             </div>
                                         </div>
                                         <div class="row m-1 tx-modal-item">
@@ -279,7 +265,7 @@
                                                 <h5 class="badge badge-primary m-0">Amount</h5>
                                             </div>
                                             <div class="col">
-                                                <p class="m-0"><small class="m-amount text-break"><b>23455</b></small></p>
+                                                <p class="m-0"><small class="m-amount "><b>23455</b></small></p>
                                             </div>
                                         </div>
                                         <p class="text-end">
